--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.chest_escape">
+    package="com.charilab.chest_escape">
    <application
         android:label="chest_escape"
         android:name="${applicationName}"
