--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.0.2
   flame_audio: ^1.0.0
   hive: ^2.0.5
+  hive_flutter: ^1.1.0
   path_provider: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
