--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   intl: ^0.17.0
   hive: ^2.0.6
   hive_flutter: ^1.1.0
+  sqflite: ^2.0.2
+  path: ^1.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.0.5
   build_runner: ^2.1.7
